--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,8 @@ encoding: utf-8
 baseurl: ""
 description: "It's never too late to learn"
 keyword: "Python"
+
+plugins: [jekyll-paginate]
+paginate: 10
+paginate_path: /page:num/
+
